--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <ul>
-            <li class="brand"><img src="logo.jpg" alt="Spotify">PARTY-BEATS</li>
+            <li class="brand"><img src="logo.jpg" alt="Spotify">SOUNDWAVES</li>
             <li>Home</li>
             <li>About</li>
         </ul>
@@ -23,22 +23,22 @@
             <div class="songItemContainer">
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Vai</span>
+                    <span class="songName"></span>
                     <span class="songlistplay"><span class="timestamp">05:01 <i id="0" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName"></span>
                     <span class="songlistplay"><span class="timestamp">05:24 <i id="1" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName"></span>
                     <span class="songlistplay"><span class="timestamp">05:04 <i id="2" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName"></span>
                     <span class="songlistplay"><span class="timestamp">06.09 <i id="3" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
                 <div class="songItem">
@@ -48,22 +48,22 @@
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName"></span>
                     <span class="songlistplay"><span class="timestamp">03:36 <i id="5" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName"></span>
                     <span class="songlistplay"><span class="timestamp">03:22 <i id="6" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName"></span>
                     <span class="songlistplay"><span class="timestamp">04:26 <i id="7" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName"></span>
                     <span class="songlistplay"><span class="timestamp">05:50 <i id="8" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
                 <div class="songItem">
